# fins

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.claude/skills/: find-skills  skill-creator
examples/: CMakeLists.txt  agent.cpp  static_agent.cpp
examples/static_workspace/: hello_world.hpp  serials.hpp  zenoh_node.hpp
sdk/: CMakeLists.txt  abi.hpp  algo_base.hpp  form.hpp  fs.hpp  g_state.hpp  logger.hpp  mesg.hpp  package.xml  server_agent.hpp  sha256.hpp  test_algo_func.cpp  time.hpp
sdk/algo/: algo_func.hpp
sdk/cmake/: finevision-extras.cmake
sdk/fins/: abi_traits.hpp  function_tags.hpp  functional_node.hpp  macros.hpp  msg.hpp  node.hpp  node_log.hpp  nodelib.hpp  pipe.hpp  plugin_loader.hpp  shared_states.hpp  spsc_queue.hpp  step.hpp  studio.hpp  thread_manager.hpp  version.hpp
sdk/fins/action/: action.hpp  action_manager.cpp  action_manager.hpp  action_session.hpp  action_tags.hpp  action_traits.hpp
sdk/fins/agent/: agent.cpp  server.hpp
sdk/fins/analysis/: aoi_analyzer.hpp  system_monitor.hpp
sdk/fins/inspect/: inspect.cpp
sdk/fins/mesg/: mesg.hpp
sdk/fins/server/: parameter_server.cpp  parameter_server.hpp  server.hpp
sdk/fins/service/: service_manager.cpp  service_manager.hpp  service_tags.hpp  service_traits.hpp
sdk/fins/type/: string_convert.hpp  type_register.cpp  type_register.hpp
sdk/fins/utils/: fs.hpp  logger.hpp  network.hpp  performance_recorder.hpp  time.hpp
toolchain/: rk3506.cmake
